Add testing code

--- a/viz.ipynb
+++ b/viz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,45 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = get_model()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "checkpoint = torch.load(\"./outputs/model.pth\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.load_state_dict(checkpoint[\"model_state_dict\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -79,94 +41,48 @@
     }
    ],
    "source": [
+    "model = get_model(model_name=\"unet\", encoder_name=\"vgg11\")\n",
+    "checkpoint = torch.load(\n",
+    "    \"outputs/no-transforms/unet-vgg11-B32-E50-LR0.001-20231121-150917/model.pth\"\n",
+    ")\n",
+    "model.load_state_dict(checkpoint[\"model_state_dict\"])\n",
+    "\n",
     "_, _, test_loader = get_dataloaders(batch_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing for image 0 / 19\n",
-      "torch.Size([32, 3, 256, 256]) torch.Size([32, 256, 256])\n",
-      "{'test_IoU': array([1.26e-321]), 'test_dice': array([1.26e-321])}\n"
+      "Test IoU: 0.9487584233283997\n",
+      "Test DICE: 0.9201500415802002\n"
      ]
     }
    ],
    "source": [
-    "history = {\"test_IoU\": np.empty([1]), \"test_dice\": np.empty([1])}\n",
+    "history = {\"test_IoU\": [], \"test_dice\": []}\n",
     "\n",
-    "for i, (image, mask) in enumerate(test_loader):\n",
-    "    print(f\"Processing for image {i} / {len(test_loader)}\")\n",
-    "    print(image.shape, mask.shape)\n",
-    "    with torch.no_grad():\n",
-    "        running_IoU = 0\n",
-    "        running_dice = 0\n",
-    "        for i, data in enumerate(test_loader):\n",
-    "            img, mask = data\n",
-    "            img, mask = img.to(device), mask.int().to(device)\n",
-    "            predictions = model(img)\n",
-    "            predictions = predictions.squeeze(1)\n",
-    "            np.append(\n",
-    "                history[\"test_IoU\"], dice_pytorch(predictions, mask).cpu().numpy()\n",
-    "            )\n",
-    "            np.append(\n",
-    "                history[\"test_dice\"], iou_pytorch(predictions, mask).cpu().numpy()\n",
-    "            )\n",
-    "    # test_dice = running_dice / len(test_loader.dataset)\n",
-    "    # test_IoU = running_IoU / len(test_loader.dataset)\n",
-    "    # print(test_IoU)\n",
-    "    # print(test_dice)\n",
+    "# for i, (image, mask) in enumerate(test_loader):\n",
+    "# print(image.shape, mask.shape)\n",
+    "with torch.no_grad():\n",
+    "    running_IoU = 0\n",
+    "    running_dice = 0\n",
+    "    for i, data in enumerate(test_loader):\n",
+    "        # print(f\"Processing for batch {i} / {len(test_loader)}\")\n",
+    "        img, mask = data\n",
+    "        img, mask = img.to(device), mask.int().to(device)\n",
+    "        predictions = model(img)\n",
+    "        predictions = predictions.squeeze(1)\n",
+    "        history[\"test_IoU\"].append(dice_pytorch(predictions, mask).cpu().numpy())\n",
+    "        history[\"test_dice\"].append(iou_pytorch(predictions, mask).cpu().numpy())\n",
     "\n",
-    "    # history[\"test_IoU\"].append(test_IoU)\n",
-    "    # history[\"test_dice\"].append(test_dice)\n",
-    "    print(history)\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'mean' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/data/santhise001/code/brain-tumour-segmentation/viz.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2B172.21.32.4/data/santhise001/code/brain-tumour-segmentation/viz.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m mean(history[\u001b[39m\"\u001b[39m\u001b[39mtest_IoU\u001b[39m\u001b[39m\"\u001b[39m])\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'mean' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "history[\"test_IoU\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['model_state_dict', 'optimizer_state_dict', 'history', 'hyperparams', 'loss_function'])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "checkpoint.keys()"
+    "print(f\"Test IoU: {np.concatenate(history['test_IoU']).mean()}\")\n",
+    "print(f\"Test DICE: {np.concatenate(history['test_dice']).mean()}\")"
    ]
   },
   {
